# megatensors

./: .gitignore  CMakeLists.txt  LICENSE  README.md  pyproject.toml
.github/workflows/: package.yml  publish.yml  release.yml
docs/: configuration.md  development.md  overview.md
docs/source/en/: _toctree.yml  examples.md  index.md
examples/: README.md  causal_lm_generate.py  extract_keys.py  hf_inference_verify.py  sign_and_verify.py
megatensors/: __init__.py  _jobs_client.py  api.py  auto_loader.py  cli.py  common.py  config.py  convert.py  cpp.pyi  dlpack.py  ep_slice.py  file_buffer.py  hub.py  loader.py  mega_hub.py  parallel_loader.py  signing.py  tensor_factory.py  threefs_loader.py
megatensors/_hub/: README.md  __init__.py  _buckets.py  _commit_api.py  _commit_scheduler.py  _dataset_viewer.py  _eval_results.py  _inference_endpoints.py  _jobs_api.py  _local_folder.py  _login.py  _native_sandbox.py  _oauth.py  _oidc.py  _sandbox.py  _sandbox_cache.py  _snapshot_download.py  _space_api.py  _tensorboard_logger.py  _tree_cache.py  _upload_large_folder.py  _upload_pipeline.py  _webhooks_server.py  community.py  constants.py  dataclasses.py  errors.py  fastai_utils.py  file_download.py  hub_mixin.py  lfs.py  mega_api.py  mega_file_system.py  repocard.py  repocard_data.py
megatensors/_hub/_hot_reload/: client.py
megatensors/_hub/cli/: __init__.py  _bucket_listing.py  _cli_utils.py  _completion.py  _cp.py  _errors.py  _framework.py  _help_formatter.py  _output.py  artifacts.py  auth.py  buckets.py  cache.py  collections.py  discussions.py  download.py  extensions.py  job_schedules.py  job_uv.py  jobs.py  jobs_support.py  mega.py  models.py  papers.py  repos.py  sandbox.py  skills.py  upload.py  webhooks.py
megatensors/_hub/inference/: _client.py  _common.py
megatensors/_hub/serialization/: _dduf.py  _torch.py
megatensors/_hub/utils/: __init__.py  _auth.py  _cache_assets.py  _cache_manager.py  _chunk_utils.py  _datetime.py  _detect_agent.py  _experimental.py  _git_credential.py  _headers.py  _http.py  _mega_uris.py  _oauth_device.py  _pagination.py  _paths.py  _runtime.py  _safetensors.py  _subprocess.py  _telemetry.py  _terminal.py  _validators.py  _verification.py  _xet.py  endpoint_helpers.py  insecure_hashlib.py  logging.py  sha.py  tqdm.py
megatensors/copier/: base.py  dstorage.py  example_copier.py  gds.py  nogds.py  registry.py  threefs.py  unified.py
megatensors/cpp/: dstorage_reader.cpp  ext.cpp  ext.hpp  gpu_compat.h
megatensors/frameworks/: __init__.py  _torch.py
perf/: compare_loaders.py
tests/: dump_pyd_imports.py  smoke_import_cpp.py  sten-collection.json  test_hub.py  test_hub_cli_auth.py  test_hub_cli_buckets.py  test_hub_cli_cache.py  test_hub_cli_collections.py  test_hub_cli_cp.py  test_hub_cli_download.py  test_hub_cli_entrypoint.py  test_hub_cli_extensions.py  test_hub_cli_jobs.py  test_hub_cli_models.py  test_hub_cli_papers.py  test_hub_cli_repos.py  test_hub_cli_sandbox.py  test_hub_cli_skills.py  test_hub_cli_upload.py  test_hub_cli_upload_tools.py  test_hub_discussions.py  test_hub_jobs.py  test_hub_native_xet_upload.py  test_hub_oauth_device.py  test_hub_papers.py  test_hub_sdk_hf_compat.py  test_hub_terminal.py  test_hub_xet_session.py
tests/unit/: conftest.py  platform_utils.py  test_auto_loader.py  test_config.py  test_ep_slice.py  test_mega_format.py  test_robustness.py  test_runtime_hint.py
tests/vllm/: test_vllm.py
(+37 files in other folders)
