[project]
name = "megatensors"
version = "0.0.1"
description = "High-performance MEGA tensor artifact loader"
authors = [{name = "zlx", email = "zlx@tensorplay.cn"}]
readme = "docs/overview.md"
license = {text = "Apache-2.0"}
keywords = ["megatensors", "mega", "GDS", "model-loading"]
requires-python = ">= 3.10, < 3.15"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "cryptography>=42.0.0",
    "click>=8.1.0",
    "filelock>=3.13.0",
    "fsspec>=2024.2.0",
    "hf-xet>=1.2.0,<2",
    "httpx>=0.27.0,<1",
    "packaging>=24.0",
    "PyYAML>=6.0.1",
    "tqdm>=4.66.3",
    "typing-extensions>=4.1.0",
]

[project.scripts]
mega = "megatensors.cli:main"

[project.optional-dependencies]
progress = [
    "tqdm>=4.66.3",
]
test = [
    "torch>=2.10.0",
    "pytest>=9.0.3",
    "pytest-cov>=5.0.0",
    "transformers>=5.0.0"
]
dev = [
    "pre-commit>=3.6.0",
    "black==26.3.1",
    "isort==6.1.0",
    "flake8==7.3.0",
    "mypy==1.19.1"
]
threefs = [
    "fastsafetensor-3fs-reader>=0.3.3",
]
oauth = [
    "Authlib>=1.3",
]
[project.urls]
Repository = "https://github.com/lexing-2026/mega"

[tool.pytest.ini_options]
filterwarnings = ["ignore:Can't initialize NVML"]

[build-system]
requires = ["scikit-build-core>=0.11.0", "pybind11"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
wheel.packages = ["megatensors"]

[tool.isort]
profile = "black"
